# moa-payments

./: .env.example  .gitignore  Cargo.toml  README.md  a.vim  diesel.toml  docker-compose.yml
migrations/2024-07-01-183726_create_users/: up.sql
src/: error.rs  main.rs
src/db/: mod.rs  models.rs  schema.rs  users.rs
src/handlers/: balances.rs  mod.rs  transactions.rs  users.rs
