[package]
name = "moa-payments"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "~2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15"
email_address = { version = "0.2.4", features = ["serde_support"]}
pwhash = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tracing-actix-web = "0.7"
tracing = "0.1"
